force-app/main/default/objects/Rental_Unit__c/Rental_Unit__c.object-meta.xml
<CustomObject>
    <description>Part of the new b2c initiative- renting out unused hardware!</description>
    <label>Rental Unit</label>
    <nameField>
        <displayFormat>BIKE-{00000}</displayFormat>
        <label>Rental Unit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>