force-app/main/default/objects/Rental_Unit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Rental Units</relationshipLabel>
    <relationshipName>Rental_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>