force-app/main/default/objects/Rental_Unit__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Deployed</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>In Storage</fullName>
            </value>
            <value>
                <fullName>Awaiting Repairs</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>