force-app/main/default/objects/Rental_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operating_Hours__c</columns>
    <columns>Product__c</columns>
    <columns>Unit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>